Fix cover on mobile

--- a/styles2/pages/cover/_cover.scss
+++ b/styles2/pages/cover/_cover.scss
@@ -3,12 +3,6 @@ body.archive-template,
 body.tag-template {
   height: 100%;
   background: $cover-background;
-
-  > .site-wrapper {
-    //height: 100%;
-    //position: relative;
-    //overflow: hidden;
-  }
 }
 
 .cover-container {
@@ -49,6 +43,7 @@ body.tag-template {
 
   .cover-container {
     background-position: 0 0;
+    min-height: 100vh;
   }
 
 }
